egonlang-core/res/examples/invalid/block_with_stmts_having_type_invalid_stmts_and_returning_expr.eg
({
    ({
        true < false;

        "foo" + "bar";

        [] and void;
        123 or [];

        void or 123 and [] or true;

        [] <= []
    })
});

// out: TypeError: mismatched types: expected type `Number` but received `Bool`
// out: TypeError: mismatched types: expected type `Number` but received `Bool`

// out: TypeError: mismatched types: expected type `Number` but received `String`
// out: TypeError: mismatched types: expected type `Number` but received `String`

// out: TypeError: mismatched types: expected type `Bool` but received `List<Unknown>`
// out: TypeError: mismatched types: expected type `Bool` but received `Void`

// out: TypeError: mismatched types: expected type `Bool` but received `Number`
// out: TypeError: mismatched types: expected type `Bool` but received `List<Unknown>`

// out: TypeError: mismatched types: expected type `Bool` but received `Number`
// out: TypeError: mismatched types: expected type `Bool` but received `List<Unknown>`
// out: TypeError: mismatched types: expected type `Bool` but received `Void`

// out: TypeError: mismatched types: expected type `Number` but received `List<Unknown>`
// out: TypeError: mismatched types: expected type `Number` but received `List<Unknown>`